Fixed a couple of lint warnings.